--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" 
     style="background-color:#d2811e ;">
         <div class="container">
-          <a class="navbar-brand" href="#">Putu Adelio</a>
+          <a class="navbar-brand" href="#">Telur Asin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,11 +42,14 @@
         </div>
       </nav>
       <!-- jumbotron -->
-      <section class="jumbotron text-center">
-        <img src="img/WhatsApp Image 2022-09-03 at 12.15.31.jpeg" alt="ADELIO" width="200"
+      <section class="Telur Asin">
+        <img src="img/telurasin.png" alt="ADELIO" width="200"
         class="rounded-circle img-thumbnail"/>
         <h2 class="display-4">PyAdeOOP </h2>
-        <p class="lead">Cita-cita saya adalah fullstack (DEV) </p>
+        <p class="lead">Telur asin produksi UMKM (Usaha Mikro, Kecil, dan Menengah) 
+          merupakan produk unggulan yang dihasilkan melalui proses pengasinan telur 
+          menggunakan metode tradisional atau inovatif. Telur asin UMKM seringkali 
+          memiliki ciri khas dan keunikan tertentu yang membedakannya dari produk serupa di pasaran. </p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffffff" fill-opacity="1" d="M0,64L48,85.3C96,107,192,149,288,160C384,171,480,149,576,170.7C672,192,768,256,864,245.3C960,235,1056,149,1152,96C1248,43,1344,21,1392,10.7L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
         <!-- akhir jumbotron -->
       </section>
