--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         </div>
       </nav>
       <!-- jumbotron -->
-      <section class="Telur Asin">
+      <section class="jumbotron text-center">
         <img src="img/telurasin.png" alt="ADELIO" width="200"
         class="rounded-circle img-thumbnail"/>
         <h2 class="display-4">PyAdeOOP </h2>
         <p class="lead">Telur asin produksi UMKM (Usaha Mikro, Kecil, dan Menengah) 
           merupakan produk unggulan yang dihasilkan melalui proses pengasinan telur 
           menggunakan metode tradisional atau inovatif. Telur asin UMKM seringkali 
-          memiliki ciri khas dan keunikan tertentu yang membedakannya dari produk serupa di pasaran. </p>
+          memiliki ciri khas dan keunikan tertentu yang membedakannya dari produk serupa di pasaran.</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffffff" fill-opacity="1" d="M0,64L48,85.3C96,107,192,149,288,160C384,171,480,149,576,170.7C672,192,768,256,864,245.3C960,235,1056,149,1152,96C1248,43,1344,21,1392,10.7L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
         <!-- akhir jumbotron -->
       </section>
